--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/fintrack
+spring.datasource.username=fintracker
+spring.datasource.password=Financial2023
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.liquibase.change-log=classpath:db/changelog/changelog.xml
