creating Controller and Services to authentication user in login process, create properties reader to get properties in secret infos in file .properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=fintracker
 spring.datasource.password=Financial2023
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.liquibase.change-log=classpath:db/changelog/changelog.xml
+
+aleatory.md5.pt1=8E059C750B86ACC
+aleatory.md5.pt2=B40939C1A361FC4B1
